Fix video size on Mobile

--- a/src/components/VideoPlayer.css
+++ b/src/components/VideoPlayer.css
@@ -17,8 +17,8 @@
 }
 
 .VideoPlayer-video {
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   border-radius: 8px;
   background-color: #121212;
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
